# mrec

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: capture.rs  config.rs  encoder.rs  main.rs  mixer.rs  recorder.rs  settings_ui.rs
tests/: config_test.rs  encoder_test.rs  mixer_test.rs
