[package]
name = "mrec"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.17"
mp3lame-encoder = "0.2"
tray-icon = "0.22"
muda = "0.16"
native-windows-gui = "1.0"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
crossbeam-channel = "0.5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
